--- a/app_gestao/templates/app_gestao/base.html
+++ b/app_gestao/templates/app_gestao/base.html
@@ -7,28 +7,29 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    
     {% block titulo %}
     {% endblock %}
 
   </head>
   <body>
     {% if user.is_authenticated %}
-      <nav style="background-color: darksalmon !important;" class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- Navbar com menu principal -->
+      <nav role="navigation" aria-label="Menu principal" style="background-color: darksalmon !important;" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="{% url 'home' %}" aria-label="Página inicial">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alternar menu de navegação">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="{% url 'cadastro' %}">Cadastrar Turmas</a>
-              <a class="nav-link" href="{% url 'registrar_presenca' %}">Registrar Presença</a>
-              <a class="nav-link" href="{% url 'registrar_atraso' %}">Registrar Atrasos</a>
-              <a class="nav-link" href="{% url 'relatorio' %}">Relatório</a>
+              <a class="nav-link" href="{% url 'cadastro' %}" aria-label="Cadastrar Turmas">Cadastrar Turmas</a>
+              <a class="nav-link" href="{% url 'registrar_presenca' %}" aria-label="Registrar Presença">Registrar Presença</a>
+              <a class="nav-link" href="{% url 'registrar_atraso' %}" aria-label="Registrar Atrasos">Registrar Atrasos</a>
+              <a class="nav-link" href="{% url 'relatorio' %}" aria-label="Visualizar Relatório">Relatório</a>
               <form action="{% url 'logout' %}" method="POST" style="display: inline;">
                 {% csrf_token %}
-                <button type="submit" class="nav-link btn btn-link" style="padding: 0; border: none; background: none; line-height: 2.5;">
+                <button type="submit" class="nav-link btn btn-link" style="padding: 0; border: none; background: none; line-height: 2.5;" role="button" aria-label="Logout">
                     Logout
                 </button>
               </form>                        
@@ -38,10 +39,11 @@
       </nav>
     {% endif %}
 
-    <footer style="background-color: darksalmon !important;" class="bg-light text-center fixed-bottom">
+    <!-- Footer fixo no final da página -->
+    <footer role="contentinfo" aria-label="Rodapé do site" style="background-color: darksalmon !important;" class="bg-light text-center fixed-bottom">
       <div class="container">
-        <p>&copy; <a style="text-decoration: none; color: black;" href="https://raw.githubusercontent.com/lucasdechiara/UNIVESP-PI-Sistema_Gerenciador_de_Atrasos/refs/heads/main/LICENSE">2025. Projeto Integrador em Computação II - DRP14 - Turma 001 - Grupo 007</a><br>
-          <a style="text-decoration: none; color: black;" href="https://univesp.br/"> UNIVESP - Universidade Virtual do Estado de São Paulo.</a>
+        <p>&copy; <a style="text-decoration: none; color: black;" href="https://raw.githubusercontent.com/lucasdechiara/UNIVESP-PI-Sistema_Gerenciador_de_Atrasos/refs/heads/main/LICENSE" aria-label="Licença do projeto">2025. Projeto Integrador em Computação II - DRP14 - Turma 001 - Grupo 007</a><br>
+          <a style="text-decoration: none; color: black;" href="https://univesp.br/" aria-label="Site da UNIVESP"> UNIVESP - Universidade Virtual do Estado de São Paulo.</a>
         </p>
       </div>
     </footer>
@@ -54,11 +56,22 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
+
+    <!-- VLibras -->
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper></div>
+    </div>
+
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
   </body>
 </html>
